Fix issues with project shadow visibility

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -266,6 +266,7 @@
   display: flex;
   justify-content: center;
   align-items: stretch;
+  padding: 1rem 2.5rem 5rem;
   padding-bottom: 5rem;
 }
 
